<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.AddGroceryItemFragment"
        android:layout_margin="8dp">

    <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_grocery_item_name_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_margin="5dp" />

    <EditText
            android:id="@+id/et_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_grocery_item_name_hint"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="5dp"
            android:inputType="text" />


    <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_grocery_item_type_title"
            app:layout_constraintTop_toBottomOf="@id/et_product_name"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_margin="5dp" />

    <Spinner
            android:id="@+id/spinner_product_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="5dp"
            android:entries="@array/grocery_item_types" />
    <!--Esto es temporal, tendrremos que cargarlo en tiempo de ejecución desde DB-->


    <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_grocery_item_quantity_title"
            app:layout_constraintTop_toBottomOf="@id/spinner_product_type"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_margin="5dp" />

    <EditText
            android:id="@+id/et_product_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_grocery_item_quantity_hint"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="5dp"
            android:inputType="number" />

    <TextView
            android:id="@+id/tv_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_grocery_item_units_title"
            app:layout_constraintTop_toBottomOf="@id/et_product_quantity"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_margin="5dp" />

    <Spinner
            android:id="@+id/spinner_product_units"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_units"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="5dp"
            android:entries="@array/grocery_item_units" />
    <!--Esto es temporal, tendrremos que cargarlo en tiempo de ejecución desde DB-->

    <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_grocery_item_price_title"
            app:layout_constraintTop_toBottomOf="@id/spinner_product_units"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_margin="5dp" />

    <EditText
            android:id="@+id/et_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_grocery_item_price_hint"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="5dp"
            android:inputType="numberDecimal" />

    <TextView
            android:id="@+id/tv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_grocery_item_image_title"
            app:layout_constraintTop_toBottomOf="@id/et_product_price"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_margin="5dp" />

    <Button
            app:icon="@drawable/baseline_photo_camera_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_grocery_item_image_button_text"
            android:drawableStart="@drawable/baseline_photo_camera_24"
            app:layout_constraintTop_toBottomOf="@id/tv_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/bt_img"
            android:layout_margin="5dp"
            style="@style/CustomButtonStyle" />

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_grocery_item_add_button_text"
            android:drawableStart="@drawable/baseline_photo_camera_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/bet_add_grocery_item"
            android:layout_margin="5dp"
            style="@style/CustomButtonStyle" />


</androidx.constraintlayout.widget.ConstraintLayout>