<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:id="@+id/addPantryItem"
    tools:context=".AddPantryItemActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAddPantry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/add_pantry_item_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvNameAddPantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/add_pantry_item_name_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAddPantry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPantryNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameAddPantry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPantryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_pantry_item_name_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/tvQuantityAddPantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/add_pantry_item_quantity_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPantryNameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPantryQuantityLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuantityAddPantry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPantryQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_pantry_item_quantity_hint"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvUnitsAddPantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/add_pantry_item_units_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPantryQuantityLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinnerProductUnitsLayoutAddPantry"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUnitsAddPantry">

        <AutoCompleteTextView
            android:id="@+id/spinnerProductUnitsAddPantry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/grocery_item_units"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvExpirationDateAddPantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/add_pantry_item_expiration_date_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerProductUnitsLayoutAddPantry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etProductExpirationDateLayoutAddPantry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExpirationDateAddPantry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProductExpirationDateAddPantry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_pantry_item_expiration_date_hint"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvImageAddPantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/add_pantry_item_image_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProductExpirationDateLayoutAddPantry" />

    <Button
        android:id="@+id/btnImgAddPantry"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/baseline_photo_camera_24"
        android:text="@string/add_pantry_item_image_button_text"
        app:icon="@drawable/baseline_photo_camera_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvImageAddPantry" />

    <Button
        android:id="@+id/btAddPantryItem"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/baseline_photo_camera_24"
        android:text="@string/add_pantry_item_add_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>