<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.fragments.HomeFragment">

    <!-- Tab Layout: Expire Items + Suggested Recipe + Markets near you -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/homeTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed">

        <!-- Expire Items Tab -->
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/priority_high_24px"
            android:text="@string/tab_expire_items" />

        <!-- Suggested Recipe Tab -->
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/skillet_24px"
            android:text="@string/tab_suggested_recipe" />

        <!-- Markets near you Tab -->
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/store_24px"
            android:text="@string/tab_markets_near" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/homeViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
